--- a/src/app/styles/Navbar.css
+++ b/src/app/styles/Navbar.css
@@ -43,7 +43,7 @@ scr/app/styles/Navbar.css
 .bar {
     height: 3px;
     width: 25px;
-    background-color: #fff;
+    background-color: rgba(255, 255, 255, 0.62);
     margin: 3px;
     transition: all 0.3s ease;
 }
@@ -102,4 +102,26 @@ scr/app/styles/Navbar.css
     width: 4px;
     background-color: currentColor;
     border-radius: 0 2px 2px 0;
+}
+
+.language-selector {
+    margin-top: auto;
+    padding: 10px 0;
+    text-align: center;
+}
+
+.language-selector select {
+    background-color: #333;
+    color: white;
+    border: 1px solid #555;
+    border-radius: 5px;
+    padding: 5px 10px;
+    font-size: 16px;
+    cursor: pointer;
+    transition: background-color 0.3s ease, color 0.3s ease;
+}
+
+.language-selector select:hover {
+    background-color: #444;
+    color: #ddd;
 }
