--- a/src/app/styles/page.css
+++ b/src/app/styles/page.css
@@ -1,10 +1,11 @@
 /* scr/app/styles/page.css */
 .home-container {
     position: relative;
-    height: 100vh;
+    min-height: 100vh;
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    gap: 2rem;
+    padding: 2rem 0;
 }
 
 .home-background {
@@ -18,4 +19,18 @@
     background-position: center;
     filter: blur(4px);
     z-index: -1;
+}
+
+.concert-container {
+    display: flex;
+    justify-content: center;
+    width: 100%;
+    z-index: 2;
+}
+
+.video-container {
+    display: flex;
+    justify-content: center;
+    width: 100%;
+    z-index: 1;
 }
