--- a/src/app/styles/page.css
+++ b/src/app/styles/page.css
@@ -14,7 +14,7 @@
     left: 0;
     width: 100%;
     height: 100%;
-    background-image: url('/home-page-bg.jpg');
+    background-image: url('/image/home-page-bg.jpg');
     background-size: cover;
     background-position: center;
     filter: blur(4px);
@@ -34,3 +34,5 @@
     width: 100%;
     z-index: 1;
 }
+
+
