--- a/src/app/styles/ConfirmOrderPage.css
+++ b/src/app/styles/ConfirmOrderPage.css
@@ -1,13 +1,13 @@
 .confirm-order-page {
     background-color: #000;
-    color: #BA55D3;
+    color: #ba55d3;
     padding: 20px;
     border-radius: 10px;
 }
 
 .personal-info-container {
     background-color: #1a1a1a;
-    color: #BA55D3;
+    color: #ba55d3;
     padding: 20px;
     border-radius: 10px;
     margin-bottom: 20px;
@@ -16,7 +16,7 @@
 .personal-info-container h1 {
     font-size: 1.5rem;
     margin-bottom: 10px;
-    color: #9370DB;
+    color: #9370db;
 }
 
 .personal-info-container p {
@@ -25,14 +25,14 @@
 
 .commodity-container {
     background-color: #1a1a1a;
-    color: #BA55D3;
+    color: #ba55d3;
     padding: 15px;
     border-radius: 10px;
     margin-bottom: 15px;
 }
 
 .confirm-order-page button {
-    background-color: #BA55D3;
+    background-color: #ba55d3;
     color: #fff;
     padding: 15px 30px;
     font-size: 1.2rem;
@@ -43,7 +43,7 @@
 }
 
 .confirm-order-page button:hover {
-    background-color: #9370DB;
+    background-color: #9370db;
 }
 
 .button-container {
@@ -54,8 +54,8 @@
     margin-left: 20px;
 }
 
-.side-button{
-    background-color: #BA55D3;
+.side-button {
+    background-color: #ba55d3;
     color: #fff;
     padding: 5px 10px;
     font-size: 0.8rem;
