--- a/src/app/styles/NewsGrid.css
+++ b/src/app/styles/NewsGrid.css
@@ -25,7 +25,9 @@
     grid-column: span 4;
     display: flex;
     flex-direction: column;
-    transition: transform 0.3s ease, box-shadow 0.3s ease;
+    transition:
+        transform 0.3s ease,
+        box-shadow 0.3s ease;
     cursor: pointer;
     /*padding: 1rem;*/
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.5);
