--- a/src/app/styles/page.css
+++ b/src/app/styles/page.css
@@ -14,7 +14,7 @@
     border-radius: 30px 30px 0 0;
     box-shadow: 0 -20px 40px rgba(0, 0, 0, 0.3);
     z-index: 2;
-    margin-top: -50px;
+    margin-top: 70px;
 }
 
 .hero-video {
@@ -102,7 +102,7 @@
 
 .content-wrapper {
     position: relative;
-    padding-top: 40px;
+    /*padding-top: 40px;*/
     z-index: 1;
 }
 
@@ -111,7 +111,7 @@
     display: flex;
     justify-content: center;
     width: 100%;
-    padding: 2rem 0;
+    padding: 4rem 0 0 0;
     margin: 20px 0;
     border-radius: 15px;
 }
