--- a/src/app/styles/Navbar.css
+++ b/src/app/styles/Navbar.css
@@ -1,4 +1,5 @@
 /* scr/app/styles/Navbar.css */
+
 .navbar {
     background: rgba(51, 51, 51, 0.9);
     position: fixed;
@@ -18,15 +19,15 @@
     align-items: center;
     justify-content: space-between;
     height: 100%;
-    max-width: 1400px;
-    margin: 0 auto;
+    width: 100%;
+    margin: 0 20px; /* Adjust the margin to push the sections further apart */
 }
 
 .navbar-logo {
-    color: white;
     text-decoration: none;
     font-size: 24px;
     font-weight: 600;
+    padding-right: 5px;
 }
 
 .navbar-menu {
@@ -75,10 +76,17 @@
     border-radius: 2px;
 }
 
+.left-section {
+    display: flex;
+    justify-content: flex-start;
+    gap: 20px;
+    padding-left: 10px;
+}
+
 .right-section {
     display: flex;
-    align-items: center;
     gap: 20px;
+    padding-right: 40px;
 }
 
 .language-selector select {
@@ -148,3 +156,20 @@
         display: block;
     }
 }
+
+.language-selector select {
+    background-color: rgba(0, 0, 0, 0.24); /* Darker background */
+    color: rgba(255, 255, 255, 0.9); /* Lighter font color */
+    border: 1px solid rgba(255, 255, 255, 0.3);
+    border-radius: 6px;
+    padding: 6px 12px;
+    font-size: 14px;
+    cursor: pointer;
+    transition: all 0.3s ease;
+}
+
+.language-selector select:hover {
+    background-color: rgba(0, 0, 0, 0.8); /* Slightly darker on hover */
+    border-color: rgba(255, 255, 255, 0.5);
+}
+
