--- a/src/app/styles/NewsGrid.css
+++ b/src/app/styles/NewsGrid.css
@@ -19,7 +19,8 @@
 }
 
 .news-item {
-    background: rgba(51, 51, 51, 0.9);
+    /*background: rgba(51, 51, 51, 0.9);*/
+    background: rgba(7, 13, 23, 0.6);
     border-radius: 1rem;
     overflow: hidden;
     grid-column: span 4;
