--- a/src/app/styles/page.css
+++ b/src/app/styles/page.css
@@ -14,7 +14,7 @@
     border-radius: 30px 30px 0 0;
     box-shadow: 0 -20px 40px rgba(0, 0, 0, 0.3);
     z-index: 2;
-    margin-top: 70px;
+    /*margin-top: 70px;*/
 }
 
 .hero-video {
@@ -48,7 +48,7 @@
 /* 圖片區段樣式 */
 .image-section {
     width: 100%;
-    min-height: 100vh;
+    min-height: 90vh;
     position: relative;
     padding-bottom: 60px;
 }
@@ -141,4 +141,13 @@
     .image-background::after {
         height: 40%; /* 在手機上增加模糊區域 */
     }
+}
+
+body {
+    background-image: url('/image/bg2.jpg');
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+
 }
