--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -19,3 +19,11 @@ body {
     background: var(--background);
     font-family: Arial, Helvetica, sans-serif;
 }
+
+body {
+    background-image: url("/image/bg2.jpg");
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+}
