--- a/src/app/styles/SongList.css
+++ b/src/app/styles/SongList.css
@@ -1,11 +1,13 @@
 /* src/app/styles/SongList.css */
 .song-list-main {
-    padding: 100px 40px 40px;
+    padding: 4rem 0 0 0;
     max-width: 1440px;
-    margin: 0 auto;
+    margin: auto;
     width: 100%;
-    min-height: 100vh;
+    min-height: 80vh;
+    border-radius: 0.5rem;
     background: rgba(0, 0, 0, 0.4);
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.5);
 }
 
 .song-list-header {
@@ -53,7 +55,9 @@
     background: rgba(51, 51, 51, 0.9);
     border-radius: 12px;
     overflow: hidden;
-    transition: transform 0.3s ease, box-shadow 0.3s ease;
+    transition:
+        transform 0.3s ease,
+        box-shadow 0.3s ease;
     cursor: pointer;
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.5);
 }
